[package]
name = "vacay"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
color-print = "0.3.7"
serde = { version = "1.0.228", features = ["derive"] }
tabled = { version = "0.20.0", features = ["ansi"] }
toml = "0.9.10"
toml-datetime-compat = { version = "0.3.0", features = ["chrono"] }
